--- a/public/scss/responsives/_tablet.scss
+++ b/public/scss/responsives/_tablet.scss
@@ -213,6 +213,10 @@
             display: none !important;
         }
     }
+
+    section {
+        overflow: hidden;
+    }
 }
 
 @media screen and (max-width: 768px) {
