--- a/public/scss/utilities/_global.scss
+++ b/public/scss/utilities/_global.scss
@@ -24,7 +24,6 @@ body {
 }
 
 section {
-    overflow-x: hidden;
     padding: 5rem 0;
 }
 
